--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               About
               <span class="sr-only">(current)</span>
             </a>
-            <a class="nav-link span2 btn-one" href="#exploreMenuSection" id="navItem2">Our Team</a>
+            <a class="nav-link span2 btn-one" href="#VenueSection" id="navItem2">Venue</a>
             <a class="nav-link span2 btn-one" href="#Events-section" id="navItem3">Events</a>
             <a class="nav-link span2 btn-one" href="#followUsSection" id="navItem4">Contact Us</a>
           </div>
@@ -262,25 +262,6 @@
       </div>
     
 
-      <div class="modal fade" id="myModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Photography</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <img src="assessts/photography.webp" style="width: 200px; height: 200px;"/>
-                </div>
-                <div class="modal-footer">
-                    
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
     <div class="modal fade" id="Cultural_guidlines">
@@ -550,16 +531,16 @@
         </div>
       </div>
 
-      <div class="Venue-menu-section pt-5 pb-5" id="exploreMenuSection">
+      <div class="Venue-menu-section pt-5 pb-5" id="VenueSection">
         <div class="container">
           <div class="row" style="justify-content: space-evenly;">
             <div class="col-12">
-              <h1 class="venue-section-heading">VENUE</h1>
+              <h1 class="venue-section-heading pb-2">VENUE</h1>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
               <div class="shadow menu-item-card p-3 mb-3" style="background-color: white;">
                 <img
-                  src=""
+                  src="assessts/outdoor.jpeg"
                   class="menu-item-image w-100"
                 />
                 <h1 class="menu-card-title">OUTDOOOR AUDITORIUM</h1>
@@ -578,7 +559,7 @@
             <div class="col-12 col-md-6 col-lg-3">
               <div class="menu-item-card shadow p-3 mb-3" style="background-color: white;">
                 <img
-                  src=""
+                  src="assessts/ground.jpeg"
                   class="menu-item-image w-100"
                 />
                 <h1 class="menu-card-title">GROUND</h1>
@@ -631,6 +612,22 @@
                 <i class="fab fa-facebook icon"></i>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex flex-row justify-content-center">
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="shadow menu-item-card p-3 mb-3" style="background-color: white;">
+            <h1 class="menu-card-title span2" >Faculty Coordinators</h1>
+            <p>Dr. Geeta Tripathi (GNITC)<br>
+              Dr. Vishal Wallia (GNIT)</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="shadow menu-item-card p-3 mb-3" style="background-color: white;">
+            <h1 class="menu-card-title span2">Student Coordinator</h1>
+            <p>Busavaly Dathrao : 9030390295 (GNITC)<br>
+              G Haritha : 7207856116 (GNIT)</p>
           </div>
         </div>
       </div>
