--- a/index.html
+++ b/index.html
@@ -468,13 +468,13 @@
                     </ol>
                     <div class="carousel-inner" style="border-radius: 20px;">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="..." alt="First slide">
+                        <img class="d-block w-100" src="assessts/sports1.jpeg" alt="First slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Second slide">
+                        <img class="d-block w-100" src="assessts/sports3.jpeg" alt="Second slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Third slide">
+                        <img class="d-block w-100" src="assessts/sports2.jpg" alt="Third slide">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
