--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
             </div>
         </div>
       
-        <h1 class="credit">Designed with by <a href=""> Hima Vamsi</a></h1>
+        <h1 class="credit">Designed by <a href=""> Hima Vamsi</a></h1>
       
       </section>
       <script type="text/javascript" src="index.js"></script>
